<resources>
    <string name="app_name">Mupen64 Plus, AE</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="dl_finished">Finished</string>
    <string name="dl_from">Downloading data from %s</string>
    <string name="dl_progress">%1$.0f%% done: file %2$s</string>
    <string name="download_unneeded">No need to download</string>
    <string name="error_dl_from">Error downloading data from %s</string>
    <string name="error_write">Write error (plugged in USB Mass Storage Device mode?) %s</string>
    <string name="failed_connecting_to">Failed connecting to %s</string>
    <string name="init">Initializing</string>
    <string name="manifest_settings">Settings</string>
    <string name="manifest_video_settings">Video Settings</string>
    <string name="manifest_choose_video_plugin">Choose Video Plugin</string>
    <string name="manifest_configure_video_plugin">Configure Video Plugin</string>
    <string name="manifest_audio_settings">Audio Settings</string>
    <string name="manifest_choose_audio_plugin">Choose Audio Plugin</string>
    <string name="manifest_input_settings">Input Settings</string>
    <string name="manifest_choose_input_plugin">Choose Input Plugin</string>
    <string name="manifest_configure_controllers">Configure Controllers</string>
    <string name="manifest_map_buttons">Map Buttons</string>
    <string name="manifest_rsp_settings">RSP Settings</string>
    <string name="manifest_choose_rsp_plugin">Choose RSP Plugin</string>
    <string name="manifest_core_settings">Core Settings</string>
    <string name="manifest_choose_core">Choose Core</string>
    <string name="manifest_configure_core">Configure Core</string>
    <string name="manifest_language">Select a language</string>
    <string name="manifest_skins">Skins(look and feel)</string>
    <string name="manifest_virtual_gamepad_settings">Virtual Gamepad Settings</string>
    <string name="manifest_touchpad_settings">Xperia Play Touchpad Settings</string>
    <string name="manifest_select_layout">Select a layout</string>
    <string name="manifest_cheats">Cheats</string>
    <string name="language_default">Default</string>
    <string name="language_use_system_locale">Use System Language Setting</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_croatian">Croatian</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_italian">Italian</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_korean">Korean</string>
    <string name="language_norwegian">Norwegian</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_spanish">Spanish</string>
    <string name="native_arabic">العربية</string>
    <string name="native_chinese">中國的</string>
    <string name="native_croatian">Hrvatski</string>
    <string name="native_dutch">Nederlands</string>
    <string name="native_english">English</string>
    <string name="native_french">Français</string>
    <string name="native_german">Deutsch</string>
    <string name="native_italian">Italiano</string>
    <string name="native_japanese">日本の</string>
    <string name="native_korean">한국의</string>
    <string name="native_norwegian">Norske</string>
    <string name="native_portuguese">Português</string>
    <string name="native_spanish">Español</string>
    <string name="mupen64plus_started">Mupen64Plus Started</string>
    <string name="savegame_slot">Savegame Slot</string>
    <string name="saving_game">Saving Game</string>
    <string name="illegal_audio_state">Audio track illegal state.  Please report at paulscode.com</string>
    <string name="app_data_inaccessible">App data not accessible (plugged in USB Mass Storage Device mode?)</string>
    <string name="ingame_menu">Menu</string>
    <string name="ingame_inc_slot">Slot++</string>
    <string name="ingame_save">Save</string>
    <string name="ingame_load">Load</string>
    <string name="ingame_close">Close</string>
    <string name="main_choose_game">Choose Game</string>
    <string name="main_select_a_game_to_play">Select a game to play</string>
    <string name="main_resume">Resume</string>
    <string name="main_continue_your_last_game">Continue your last game</string>
    <string name="main_settings">Settings</string>
    <string name="main_configure_plug_ins">Configure plug-ins, skins, etc.</string>
    <string name="main_help">Help!</string>
    <string name="main_rept_bugs">paulscode.com support, report bugs</string>
    <string name="main_credits">Credits</string>
    <string name="main_devs_contribs_tstrs">Developers, testers, contributers</string>
    <string name="main_cheat">Cheat!</string>
    <string name="main_choose_game_to_hack">Choose a game to hack</string>
    <string name="main_close">Close</string>
    <string name="main_exit_the_app">Exit the app</string>
    <string name="file_size">File Size</string>
    <string name="file_folder">Folder</string>
    <string name="file_current_folder">Current Folder</string>
    <string name="file_parent_folder">Parent Folder</string>
    <string name="cheats_for">"Cheats for "</string>
    <string name="cheats_disable">Disable</string>
    <string name="cheats_dont_use">Don\'t use this cheat</string>
    <string name="cheats_long_full_text">(long-press for full text)</string>
    <string name="cheats_full_text">Full Text</string>
    <string name="cheats_no_description">(no description available)</string>
    <string name="cheats_default_name">Cheat</string>
    <string name="cheats_long_notes">(long-press for notes)</string>
    <string name="cheats_notes">Notes</string>
    <string name="cheats_no_notes">(no notes available for this cheat)</string>
    <string name="cheats_close">Close</string>
    <string name="cheats_start">Start Game!</string>
    <string name="cheats_launch_selected">Launch with selected cheats</string>
    <string name="settings_video">Video</string>
    <string name="settings_config_graphics">Configure graphics settings</string>
    <string name="settings_audio">Audio</string>
    <string name="settings_audio_settings">Configure audio settings</string>
    <string name="settings_input">Input</string>
    <string name="settings_map_controller_buttons">Map controller buttons</string>
    <string name="settings_virtual_gamepad">Virtual Gamepad</string>
    <string name="settings_config_virtual_gamepad">Configure the virtual gamepad</string>
    <string name="settings_xperia_play_optimized">Xperia Play Optimized</string>
    <string name="settings_xperia_play_only">ONLY enable this if your device is a Sony Ericsson Xperia Play</string>
    <string name="settings_touchpad">Touchpad</string>
    <string name="settings_config_touchpad">Configure the touchpad</string>
    <string name="settings_rsp">RSP</string>
    <string name="settings_reality_signal_processor">Reality Signal Processor</string>
    <string name="settings_core">Core</string>
    <string name="settings_emu_core_settings">Emulator core settings</string>
    <string name="settings_reset_defaults">Reset Default Settings</string>
    <string name="settings_reset_to_deflt_vals">Reset all to default values</string>
    <string name="settings_problem_resetting">Problem resetting defaults (see logcat)</string>
    <string name="settings_restore_app_data">Restore App Data</string>
    <string name="settings_imports_will_be_lost">Imported plugins and textures will be lost!</string>
    <string name="settings_enable_auto_save">Enable Auto-Save</string>
    <string name="settings_auto_save_game_on_exit">Automatically save games upon exit</string>
    <string name="settings_language">Language</string>
    <string name="settings_manually_change_language">Manually change the language</string>
    <string name="audio_change">Change</string>
    <string name="audio_enable">Enable</string>
    <string name="audio_use_plgin">Use this plug-in</string>
    <string name="audio_change_plug_in">Change Plug-in</string>
    <string name="audio_import">Import…</string>
    <string name="audio_new_plgin">Add new audio plug-in</string>
    <string name="input_map_ctrl_1_buttons">Map controller 1 buttons</string>
    <string name="input_map_ctrl_2_buttons">Map controller 2 buttons</string>
    <string name="input_map_ctrl_3_buttons">Map controller 3 buttons</string>
    <string name="input_map_ctrl_4_buttons">Map controller 4 buttons</string>
    <string name="input_special_buttons">Special Buttons</string>
    <string name="input_map_core_funcs_buttons">Map core functions to buttons</string>
    <string name="input_map_ctrl_btns">Map controller buttons</string>
    <string name="video_change_plug_in">Change Plug-in</string>
    <string name="video_configure">Configure</string>
    <string name="video_change_the_settings">Change the settings</string>
    <string name="video_rgba_8888_mode">RGBA_8888 Mode</string>
    <string name="video_improve_gfx_devices">Improves graphics on some devices</string>
    <string name="video_enable">Enable</string>
    <string name="video_use_this_plug_in">Use this plug-in</string>
    <string name="video_enable_skip_frame">Enable Frameskip</string>
    <string name="video_improve_speed_at_cst_fps">(improves speed at cost of FPS)</string>
    <string name="video_enable_fast_texture_crc">Enable Fast Texture CRC</string>
    <string name="video_disble_imprv_2d">(disabling improves 2D elements)</string>
    <string name="video_enable_fast_texture_loading">Enable Fast Texture Loading</string>
    <string name="video_fixes_crcl_trnstions">(fixes circle transitions)</string>
    <string name="video_enable_hires_textures">Enable HiRes Textures</string>
    <string name="video_use_imprtd_txtr_pcks">(use imported texture packs)</string>
    <string name="video_imprt_txtr_pck_zip_fmt">Import Texture Pack, ZIP format</string>
    <string name="video_apply_cust_txtr">(apply custom textures to a game)</string>
    <string name="video_stretch_screen">Stretch Screen</string>
    <string name="video_may_skew">(may skew aspect ratio)</string>
    <string name="video_auto_frameskip">Auto Frameskip</string>
    <string name="video_auto_adjust">(auto-adjusts based on speed)</string>
    <string name="video_max_frameskip">Max Frameskip</string>
    <string name="video_disable_auto_fskip">" (disable auto frameskip to set manually)"</string>
    <string name="video_enable_fog">Enable Fog</string>
    <string name="video_need_work">(needs work)</string>
    <string name="video_force_screen_clear">Force Screen Clear</string>
    <string name="video_clrs_junk_grfx">(clears some junk graphics)</string>
    <string name="video_enable_alpha_test">Enable Alpha Test</string>
    <string name="video_disble_fr_spdhck">(disable for speed hack, black textures)</string>
    <string name="video_hack_z">Hack Z</string>
    <string name="video_enble_fx_flshng_bckgrnd">(enable to fix flashing background)</string>
    <string name="gamepad_change_layout">Change Layout</string>
    <string name="gamepad_redraw_all">Redraw All</string>
    <string name="gamepad_misbut_bug">Slower, fixes missing buttons bug</string>
    <string name="gamepad_accurate_n64_stick">Accurate N64 Stick</string>
    <string name="gamepad_analg_as_octgon">Emulate analog as octagon</string>
    <string name="gamepad_display_fps">Display FPS</string>
    <string name="gamepad_shw_frm_sec">Show the frames-per-second</string>
    <string name="gamepad_enable">Enable</string>
    <string name="gamepad_use_virt_gpad">Use the virtual gamepad</string>
    <string name="touchpad_change">Change</string>
    <string name="touchpad_enable">Enable</string>
    <string name="touchpad_use_touchpad">Use the touchpad</string>
</resources>